# hook-sink

./: .gitignore  LICENSE  README.md  pyproject.toml
hook_sink/: __init__.py  cli.py  dashboard.py  replayer.py  server.py  storage.py  validator.py
hook_sink/templates/: dashboard.html
